--- a/README.org
+++ b/README.org
@@ -4,6 +4,10 @@ Install powerline fonts with:
 #+begin_src bash
 # ubuntu/debian
 sudo apt-get install fonts-powerline
+
+git clone https://github.com/powerline/fonts.git --depth=1
+cd fonts
+./install.sh
 #+end_src
 
 
