--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * Suckless Configs
 ** Powerline Fonts
-Install powerline fonts with: 
+Install powerline fonts with ([[reference][https://www.fosslinux.com/134427/how-to-install-and-use-powerline-fonts-on-ubuntu.htm]]): 
 #+begin_src bash
 # ubuntu/debian
 sudo apt-get install fonts-powerline
